style.css
/*
  1. Use a more-intuitive box-sizing model.
*/
*,
*::before,
*::after {
  box-sizing: border-box;
}
/*
  2. Remove default margin
*/
* {
  margin: 0;
}
/*
  Typographic tweaks!
  3. Add accessible line-height
  4. Improve text rendering
*/
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}
/*
  5. Improve media defaults
*/
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}
/*
  6. Remove built-in form typography styles
*/
input,
button,
textarea,
select {
  font: inherit;
}
/*
  7. Avoid text overflows
*/
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}
/*
  8. Create a root stacking context
*/
#root,
#__next {
  isolation: isolate;
}

.hidden {
  display: none;
}

@font-face {
  font-family: "Work Sans";
  src: url("assets/fonts/static/WorkSans-Bold.woff2") format("woff2");
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: "Work Sans";
  src: url("assets/fonts/static/WorkSans-SemiBold.woff2") format("woff2");
  font-weight: 600;
  font-style: normal;
}

@font-face {
  font-family: "Work Sans";
  src: url("assets/fonts/static/WorkSans-Regular.woff2") format("woff2");
  font-weight: normal;
  font-style: normal;
}

:root {
  --clr-neutral-100: hsl(0, 0%, 100%);
  --clr-neutral-200: hsl(275, 100%, 97%);
  --clr-neutral-300: hsl(292, 16%, 49%);
  --clr-neutral-400: hsl(292, 42%, 14%);

  --clr-accent-pink: hsl(277, 49%, 49%);

  --ff-base: "Work Sans", sans-serif;
  --fw-bold: 700;
  --fw-semibold: 600;
  --fw-regular: 400;
}

main {
  min-height: 100vh;
  min-height: 100dvh;
  display: grid;
  justify-content: center;
  padding-top: 5rem;

  background-image: url(assets/images/background-pattern-mobile.svg);
  background-repeat: no-repeat;
  background-size: 100%;
  background-color: var(--clr-neutral-200);
}

.faq {
  font-family: var(--ff-base);
  background-color: var(--clr-neutral-100);
  height: min-content;
  padding: 1rem;
  padding-bottom: 0;
  margin: 1rem;
  border-radius: 0.5625rem;
}

.faq__title {
  margin-top: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  font-size: 2rem;
}

.faq__title::before {
  --height: calc(2.5rem / 1.5);
  --width: calc(2.5625rem / 1.5);
  content: "";
  display: inline;
  background-image: url(assets/images/icon-star.svg);
  width: var(--width);
  height: var(--height);
  background-size: var(--width) var(--height);
}

.faq__question {
  color: var(--clr-neutral-400);
  font-size: 1.0625rem;
  padding: 1rem 0;
  display: flex;
  justify-content: space-between;
  width: 100%;
  text-align: left;
  align-items: center;
  background-color: transparent;
  border: none;

  font-weight: var(--fw-semibold);
  cursor: pointer;
}

.faq__question:is(:focus, :hover) {
  color: var(--clr-accent-pink);
}

.faq__section {
  color: var(--clr-neutral-300);
  font-size: 1rem;
  margin-bottom: 1rem;
}

.faq__border {
  width: 100%;
  border-bottom: 1px var(--clr-neutral-200) solid;
}

@media (min-width: 40rem) {
  main {
    background-image: url(assets/images/background-pattern-desktop.svg);
  }

  .faq {
    width: 100%;
    max-width: 39rem;
  }
}

